more basic changes

--- a/backup/index.html
+++ b/backup/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <script src="https//use.fontawesome.com/d1341f9b7a.js"></script>
-    <link rel="stylesheet" href="style.cs">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="style.css">
     <title>Personal WebSite</title>
   </head>
   <body>
@@ -12,6 +14,14 @@
 	<h1>Keith A. Bush</h1>
 	<h5>Machine Learning and Neuroimage</h5>
   <p> Text about me</p>
+<ul>
+<li> <a href="https://twitter.com/keith_a_bush"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+<li> <a href="https://github.com/kabush"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+<li> <a href="http://psychiatry.uams.edu/research/birc/"><i class="fas fa-hospital-symbol" aria-hidden="true"></i></a></li>
+
+
+</ul>
+
 </div>
   </body>
 
