--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <ul>
 <li> <a href="https://twitter.com/keith_a_bush"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
 <li> <a href="https://github.com/kabush"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+<li> <a href="http://psychiatry.uams.edu/research/birc/"><i class="fas fa-hospital-symbol" aria-hidden="true"></i></a></li>
 
 
 </ul>
