more basic changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<img src="./images/profile.png" alt="" class="box-img">
 	<h1>Keith A. Bush</h1>
 	<h5>Machine Learning and Neuroimage</h5>
-  <p> Text about me</p>
+<!--  <p> Text about me</p> -->
 <ul>
 <li> <a href="https://twitter.com/keith_a_bush"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
 <li> <a href="https://github.com/kabush"><i class="fab fa-github" aria-hidden="true"></i></a></li>
