more basic changes

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style.css">
-    <title>Personal WebSite</title>
+    <title>Personal Website: Keith A. Bush</title>
   </head>
   <body>
 <div class="box">
 	<img src="./images/profile.png" alt="" class="box-img">
-	<h1>Keith A. Bush, Ph.D.</h1>
+	<h1>Keith A. Bush</h1>
 	<h5>Machine Learning | Neuroimaging</h5>
 <!--  <p> Text about me</p> -->
 <ul>
