added in projects without links to source materals

--- a/index.html
+++ b/index.html
@@ -4,28 +4,97 @@
     <meta charset="utf-8">
 <!--    <script src="https//use.fontawesome.com/d1341f9b7a.js"></script> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-
     <link rel="stylesheet" href="style.css">
     <title>Personal Website: Keith A. Bush</title>
   </head>
   <body>
-<div class="box">
-	<img src="./images/profile.png" alt="" class="box-img">
-	<h1>Keith A. Bush</h1>
-	<h5>Machine Learning | Neuroimaging</h5>
-<!--  <p> Text about me</p> -->
-<ul>
-<li> <a href="https://twitter.com/keith_a_bush"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-<li> <a href="https://github.com/kabush"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-<li> <a href="http://psychiatry.uams.edu/research/birc/"><i class="fas fa-hospital-symbol" aria-hidden="true"></i></a></li>
+
+    <div class="box_head">
+      <img src="./images/profile.png" alt="" class="box-img">
+      <h1>Keith A. Bush</h1>
+      <h5>Machine Learning | Neuroimaging</h5>
+      <ul>
+	<li> <a href="https://twitter.com/keith_a_bush"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+	<li> <a href="https://github.com/kabush"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+	<li> <a href="http://psychiatry.uams.edu/research/birc/"><i class="fas fa-leaf" aria-hidden="true"></i></a></li>
+      </ul>
+      <h5> </h5>
+      <hr>
+      <h1>Research Projects</h1>
 
 
-</ul>
+      <p>2018</p>
+	<table style="width:100%">
 
-</div>
+<!--	  <tr>
+	    <td>
+	      <img src="./images/er_skill.png" alt="" class="box-thumb">
+	    </td> 
+	    <td>
+	      <p>
+	      Intrinsic Neuromodulation of Core Affect
+	      </p>
+	      </td>
+	    </tr> -->
+	  <tr>
+	    <td>
+	      <img src="./images/cns_2018.jpg" alt="" class="box-thumb">
+	    </td> 
+	    <td>
+	      <p>
+		Brain States Encode both Perceived Emotion and the Physiological Response Induced by Visual Stimuli
+	      </p>
+	      </td>
+	  </tr>
+          <tr>
+            <td>
+              <img src="./images/stim_perf.jpg" alt="" class="box-thumb">
+            </td>
+            <td>
+              <p>
+		Neural Encodings of Image Induced Affect are Reliable Across Studies but Prediction Performance is Image Dependent
+              </p>
+              </td>
+          </tr>
+	</table>
+
+
+      <p>2017</p>
+	<table style="width:100%">
+	  <tr>
+	    <td>
+	      <img src="./images/cns_2017.jpg" alt="" class="box-thumb">
+	    </td> 
+	    <td>
+	      <p>
+		Evidence for Error Feedback Control During Intrinsic Neuromodulation of Emotion
+	      </p>
+	      </td>
+	  </tr>
+	</table>
+
+
+
+      <p>2016</p>
+	<table style="width:100%">
+	  <tr>
+	    <td>
+	      <img src="./images/npda.jpg" alt="" class="box-thumb">
+	      </a>
+	    </td>
+	    <td>
+	      <p>
+		Distributed Neural Processing Predictors of Mulit-Dimensional Properties of Affective Signals
+		</p>
+	    </td>
+	  </tr>
+	  <tr>
+	    <td> </td>
+	    </tr>
+	  </table>
+
+
+      </div>
   </body>
 
 </html>
-
-
-<!--	background: url("./images/blue.jpg") no-repeat;-->
