--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -10,7 +10,7 @@
   <body>
 
     <div class="box_head">
-      <img src="./images/profile_oval.png" alt="" class="box-img">
+      <img src="./images/profile.png" alt="" class="box-img">
       <h1>Keith A. Bush</h1>
       <h5>Machine Learning | Neuroimaging</h5>
       <ul>
