cropped the square profile photo and replaced

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
     <div class="box_head">
-      <img src="./images/profile.png" alt="" class="box-img">
+      <img src="./images/profile_crop.png" alt="" class="box-img">
       <h1>Keith A. Bush</h1>
       <h5>Machine Learning | Neuroimaging</h5>
       <ul>
