small format changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--    <script src="https//use.fontawesome.com/d1341f9b7a.js"></script> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Personal Website: Keith A. Bush</title>
+    <title>Website: Keith A. Bush</title>
   </head>
   <body>
 
@@ -15,8 +15,13 @@
       <h5>Machine Learning | Neuroimaging</h5>
       <ul>
 	<li> <a href="https://twitter.com/keith_a_bush"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+	<img hspace="5px">
+
+	<li> <a href="http://psychiatry.uams.edu/research/birc/"><i class="far fa-bookmark" aria-hidden="true"></i></a></li>
+	<img hspace="5px">
 	<li> <a href="https://github.com/kabush"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-	<li> <a href="http://psychiatry.uams.edu/research/birc/"><i class="fas fa-leaf" aria-hidden="true"></i></a></li>
+
+
       </ul>
       <h5> </h5>
 
