--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
 	<li> <a href="https://twitter.com/keith_a_bush"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
 	<img hspace="8px">
 
-	<li> <a href="http://psychiatry.uams.edu/research/birc/"><i class="far fa-bookmark" aria-hidden="true"></i></a></li>
+	<li> <a href="https://scholar.google.com/citations?user=lMg1OzsAAAAJ&hl=en&oi=ao"><i class="far fa-bookmark" aria-hidden="true"></i></a></li>
 	<img hspace="8px">
 	<li> <a href="https://github.com/kabush"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-
-
       </ul>
-      <h5> </h5>
+
+      <h6>kabush [at] gmail.com</h6>
 
 
       <!--
