--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <body>
 
     <div class="box_head">
-      <img src="./images/profile_crop.png" alt="" class="box-img">
+      <img src="./profile_crop.png" alt="" class="box-img">
       <h1>Keith A. Bush</h1>
       <h5>Machine Learning | Neuroimaging</h5>
       <ul>
 	<li> <a href="https://twitter.com/keith_a_bush"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
 	<img hspace="8px">
 
-	<li> <a href="https://scholar.google.com/citations?user=lMg1OzsAAAAJ&hl=en&oi=ao"><i class="far fa-bookmark" aria-hidden="true"></i></a></li>
+	<li> <a href="https://scholar.google.com/citations?user=lMg1OzsAAAAJ&hl=en&oi=ao"><i class="fab fa-google" aria-hidden="true"></i></a></li>
 	<img hspace="8px">
 	<li> <a href="https://github.com/kabush"><i class="fab fa-github" aria-hidden="true"></i></a></li>
       </ul>
