altered email address

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<li> <a href="https://github.com/kabush"><i class="fab fa-github" aria-hidden="true"></i></a></li>
       </ul>
 
-      <h6>kabush [at] gmail.com</h6>
+      <h6>kabush [at] gmail [dot] com</h6>
 
 
       <!--
