added lab page to link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="box_head">
       <img src="./profile_crop.png" alt="" class="box-img">
       <h1>Keith A. Bush</h1>
-      <h5>Machine Learning | Neuroimaging</h5>
+      <h5>Machine Learning | Neuroimaging </h5>
+      <h5>Principal Investigator: <a href="github.com/kabush/kablab.html">kablab</a></h5>
       <ul>
 	<li> <a href="https://twitter.com/keith_a_bush"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
 	<img hspace="8px">
@@ -22,7 +23,8 @@
 	<li> <a href="https://github.com/kabush"><i class="fab fa-github" aria-hidden="true"></i></a></li>
       </ul>
 
-      <h6>kabush [at] gmail [dot] com</h6>
+
+      <!-- <h6>kabush [at] gmail [dot] com</h6> -->
 
 
       <!--
