--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img src="./profile_crop.png" alt="" class="box-img">
       <h1>Keith A. Bush</h1>
       <h5>Machine Learning | Neuroimaging </h5>
-      <h5>Principal Investigator of <a href="https://docs.google.com/document/d/1nmVncl2tICB3_UnwhNcTzyt14YEVjSlRnfspwWTsEgc/edit?usp=sharingkablab">kablab</a></h5>
+      <h5>Principal Investigator of <a href="https://docs.google.com/document/d/1nmVncl2tICB3_UnwhNcTzyt14YEVjSlRnfspwWTsEgc/edit?usp=sharingkablab"><i>KABlab</i></a></h5>
       <ul>
 	<li> <a href="https://twitter.com/keith_a_bush"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
 	<img hspace="8px">
