reformatted to link to google doc lab page

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="style.css">
     <title>Website: Keith A. Bush</title>
   </head>
+  
   <body>
-
+    
     <div class="box_head">
       <img src="./profile_crop.png" alt="" class="box-img">
       <h1>Keith A. Bush</h1>
       <h5>Machine Learning | Neuroimaging </h5>
-      <h5>Principal Investigator of <a href="https://docs.google.com/document/d/1nmVncl2tICB3_UnwhNcTzyt14YEVjSlRnfspwWTsEgc/edit?usp=sharingkablab"><i>KABlab</i></a></h5>
+
+
       <ul>
 	<li> <a href="https://twitter.com/keith_a_bush"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
 	<img hspace="8px">
@@ -22,74 +24,14 @@
 	<img hspace="8px">
 	<li> <a href="https://github.com/kabush"><i class="fab fa-github" aria-hidden="true"></i></a></li>
       </ul>
-      
-      <h6>kabush [at] gmail [dot] com</h6>
 
+    </div>
 
-      <!--
-      <hr>
-      <h1>Research Projects</h1>
+    <div class="lab_head">
+      <ul>
+     <li>Principal Investigator of <a href="https://docs.google.com/document/d/1nmVncl2tICB3_UnwhNcTzyt14YEVjSlRnfspwWTsEgc/edit?usp=sharingkablab"><b>kab</b>lab</a></li>
+     </ul>
 
-      <p>2018</p>
-	<table style="width:100%">
-
-	  <tr>
-	    <td>
-	      <img src="./images/cns_2018.jpg" alt="" class="box-thumb">
-	    </td> 
-	    <td>
-	      <p>
-		Brain States Encode both Perceived Emotion and the Physiological Response Induced by Visual Stimuli
-	      </p>
-	      </td>
-	  </tr>
-          <tr>
-            <td>
-              <img src="./images/stim_perf.jpg" alt="" class="box-thumb">
-            </td>
-            <td>
-              <p>
-		Neural Encodings of Image Induced Affect are Reliable Across Studies but Prediction Performance is Image Dependent
-              </p>
-              </td>
-          </tr>
-	</table>
-
-
-      <p>2017</p>
-	<table style="width:100%">
-	  <tr>
-	    <td>
-	      <img src="./images/cns_2017.jpg" alt="" class="box-thumb">
-	    </td> 
-	    <td>
-	      <p>
-		Evidence for Error Feedback Control During Intrinsic Neuromodulation of Emotion
-	      </p>
-	      </td>
-	  </tr>
-	</table>
-
-
-
-      <p>2016</p>
-	<table style="width:100%">
-	  <tr>
-	    <td>
-	      <img src="./images/npda.jpg" alt="" class="box-thumb">
-	      </a>
-	    </td>
-	    <td>
-	      <p>
-		Distributed Neural Processing Predictors of Mulit-Dimensional Properties of Affective Signals
-		</p>
-	    </td>
-	  </tr>
-	  <tr>
-	    <td> </td>
-	    </tr>
-	  </table>
--->
       </div>
 
   </body>
