--- a/kablab/people.html
+++ b/kablab/people.html
@@ -27,8 +27,20 @@
 
     </div>
 
+    <div class="lab_head">
+      
+      <p>Principal Investigator</p>
 
-      </div>
+     <table>
+       <tr>
+	 <!-- 728x928 -->
+	 <td><img src="images/kab.png" width="142" height="187"></td>
+	 <td> <img hspace="20px"> </td>
+	 <td> Keith A. Bush earned a PhD in Computer Science from Colorado State University.  He continued his training as a postdoctoral fellow under Joelle Pineau at McGill University. He is currently an Assistant Professor in the Brain Imaging Research Center of the Department of Psychiatry at the University of Arkansas for Medical Sciences where he explores control theoretic models of affect processing and mental illness.</td>
+	 
+     </table>
+     
+    </div>
 
   </body>
 
