--- a/kablab/science.html
+++ b/kablab/science.html
@@ -27,8 +27,61 @@
 
     </div>
 
+    <div class="lab_head">
 
-      </div>
+      <p><b>A Causal Test of Emotion Regulation in the Affective Perception of Visual Stimuli</b></p>
+      
+     <table>
+       <tr>
+	 <!-- 728x928 -->
+	 <td><u>Funding</u></td>
+	 <td> <img hspace="20px"> </td>
+	 <td>NARSAD Young Investigator Award, Brain & Behavior Research Foundation</td>
+       </tr>
+       <tr>
+	 <td valign="top"><u>Summary</u></td>
+	 <td> <img hspace="20px"> </td>
+	 <td valign="top"> This project applies real-time fMRI to interrogate both the role and neural mechanism of volitional emotion regulation in altering the perceived affective content of visual stimuli. </td>
+       </tr>
+       <tr>
+	 <td><u>Code</u></td>
+	 <td> <img hspace="20px"></td>
+	 <td><i>[in preparation]</i> </td>
+       </tr>
+       <tr>
+	 <td><u>Publications</u></td>
+	 <td> <img hspace="20px"></td>
+	 <td> <i>[in preparation]</i> </td>
+       </tr>
+     </table>
+
+
+     <p><b>Cognitive Control Theoretic Mechanisms of Real-time fMRI-guided Neuromodulation</b></p>
+     <table>
+      <tr>
+        <!-- 728x928 -->
+        <td><u>Funding</u></td>
+        <td> <img hspace="20px"> </td>
+        <td>National Science Foundation</td>
+      </tr>
+      <tr>
+        <td valign="top"><u>Summary</u></td>
+        <td> <img hspace="20px"> </td>
+        <td valign="top">???  </td>
+      </tr>
+      <tr>
+        <td><u>Code</u></td>
+        <td> <img hspace="20px"></td>
+        <td><a href="https://github.com/kabush/IN">https://github.com/kabush/IN </td>
+      </tr>
+      <tr>
+        <td><u>Publications</u></td>
+        <td> <img hspace="20px"></td>
+        <td> ??? </td>
+      </tr>
+    </table>
+     
+    </div>
 
   </body>
 
