--- a/kablab/kablab.html
+++ b/kablab/kablab.html
@@ -27,8 +27,24 @@
 
     </div>
 
+    <div class="lab_head">
+      
+      <p>
 
-      </div>
+	<b>kab</b>lab is a brain imaging research lab focusing on the exploration of neural mechanisms underlying affect processing and cognitive control. The lab pursues questions of basic science as well as the application of scientific principles to inform the treatment of mental illness with a focus on the following tools and principles:</p>
+      <ul>
+
+	<li>hypotheses derived from reinforcement learning and control theory;</li>
+    <li>3T fMRI neuroimaging and physiological measurements;</li>
+    <li>whole-brain multivoxel pattern analysis; and,</li>
+    <li> open science.</li>
+    </ul>
+    
+    </div>
+
+
+
+
 
   </body>
 
