fixed hyperlink coloring issues

--- a/kablab/science.html
+++ b/kablab/science.html
@@ -29,11 +29,9 @@
 
     <div class="lab_head">
 
-      <p><b>A Causal Test of Emotion Regulation in the Affective Perception of Visual Stimuli</b></p>
-      
+     <p><br>Causal Test of Emotion Regulation in the Affective Perception of Visual Stimuli</p>
      <table>
        <tr>
-	 <!-- 728x928 -->
 	 <td><u>Funding</u></td>
 	 <td> <img hspace="20px"> </td>
 	 <td>NARSAD Young Investigator Award, Brain & Behavior Research Foundation</td>
@@ -49,14 +47,11 @@
 	 <td><i>[in preparation]</i> </td>
        </tr>
        <tr>
-	 <td><u>Publications</u></td>
 	 <td> <img hspace="20px"></td>
-	 <td> <i>[in preparation]</i> </td>
-       </tr>
+	 </tr>
      </table>
 
-
-     <p><b>Cognitive Control Theoretic Mechanisms of Real-time fMRI-guided Neuromodulation</b></p>
+     <p>Cognitive Control Theoretic Mechanisms of Real-time fMRI-guided Neuromodulation</p>
      <table>
       <tr>
         <!-- 728x928 -->
@@ -67,18 +62,17 @@
       <tr>
         <td valign="top"><u>Summary</u></td>
         <td> <img hspace="20px"> </td>
-        <td valign="top">???  </td>
+        <td valign="top">This project applies cognitive and engineering control theoretic analysis to unmask the control systems underlying both unguided and fMRI-based neurofeedback-guided core affect regulation.
+  </td>
       </tr>
       <tr>
         <td><u>Code</u></td>
         <td> <img hspace="20px"></td>
-        <td><a href="https://github.com/kabush/IN">https://github.com/kabush/IN </td>
+        <td><a href="https://github.com/kabush/IN"><i>https://github.com/kabush/IN</i></td>
       </tr>
       <tr>
-        <td><u>Publications</u></td>
-        <td> <img hspace="20px"></td>
-        <td> ??? </td>
-      </tr>
+	<td><img hspace="20px"></td>
+	</tr>
     </table>
      
     </div>
