--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="lab_head">
       <ul>
-     <li>Principal Investigator of <a href="https://docs.google.com/document/d/1nmVncl2tICB3_UnwhNcTzyt14YEVjSlRnfspwWTsEgc/edit?usp=sharingkablab"><b>kab</b>lab</a></li>
+     <li>Principal Investigator of <a href="kablab/kablab.html"><b>kab</b>lab</a></li>
      </ul>
 
       </div>
