--- a/kablab/podcast/podcast.html
+++ b/kablab/podcast/podcast.html
@@ -5,7 +5,7 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Website: kablab [podcast]</title>
+    <title>Website: kablab</title>
   </head>
   
   <body>
@@ -27,8 +27,26 @@
 
     </div>
 
+    <div class="lab_head">
 
-      </div>
+      <br><br>
+     <table>
+       <tr>
+	 <td valign="top" style="width: 100px">Episode 1</td>
+	 <td> <img hspace="5px"> </td>
+	 <td valign="top">
+	   <a href="audio/episode0.mp3">Audio</a><br>
+	   <a href="https://www.nature.com/articles/s41598-018-33621-6">Article</a><br>
+	   <a href="https://drive.google.com/open?id=1yBuWWKuhEk0BOvhiJZiIRnisZnodipna4_QvJvDzZKc">Review</a></td>
+	 <td> <img hspace="5px"> </td>
+	 <td valign="top">Open Review of “Common Functional Brain States Encode both Perceived Emotion and the Psychophysiological Response to Affective Stimuli” (Bush et al., 2018).</td>
+       </tr>
+
+       
+	 
+     </table>
+
+    </div>
 
   </body>
 
