formatting and small content changes

--- a/kablab/kablab.html
+++ b/kablab/kablab.html
@@ -33,7 +33,7 @@
       
       <p>
 
-	<b>kab</b>lab is a brain imaging research lab focusing on the exploration of neural mechanisms underlying affect processing and cognitive control. The lab pursues questions of basic science as well as the application of scientific principles to inform the treatment of mental illness with a focus on the following tools and principles:</p>
+	<b>kab</b>lab is a brain imaging research lab focusing on the exploration of neural mechanisms underlying affect processing and cognitive control. The lab pursues questions of basic science as well as the application of scientific principles to inform the treatment of mental illness with a focus on:</p>
       <ul>
 
 	<li>hypotheses derived from reinforcement learning and control theory;</li>
