--- a/kablab/science.html
+++ b/kablab/science.html
@@ -69,7 +69,7 @@
       <tr>
         <td><u>Code</u></td>
         <td> <img hspace="20px"></td>
-        <td><a href="https://github.com/kabush/IN"><i>https://github.com/kabush/IN</i></td>
+        <td><a href="https://github.com/kabush/IN">https://github.com/kabush/IN</td>
       </tr>
       <tr>
 	<td><img hspace="20px"></td>
