small toolset change to overview

--- a/kablab/kablab.html
+++ b/kablab/kablab.html
@@ -37,7 +37,7 @@
       <ul>
 
 	<li>hypotheses derived from reinforcement learning and control theory;</li>
-    <li>3T fMRI neuroimaging and physiological measurements;</li>
+    <li>3T fMRI neuroimaging and psychophysiological measurements;</li>
     <li>whole-brain multivoxel pattern analysis; and,</li>
     <li> open science.</li>
     </ul>
