swapped out lab link for email until up and running

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
     <div class="lab_head">
       <ul>
-     <li>Principal Investigator of <a href="kablab/kablab.html"><b>kab</b>lab</a></li>
+	<!-- <li>Principal Investigator of <a href="kablab/kablab.html"><b>kab</b>lab</a></li> -->
+	<li>kabush [at] gmail [dot] com</li>
      </ul>
 
       </div>
